--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ highlight:
   auto_detect: true
   tab_replace: ''
   wrap: true
-  hljs: false
+  hljs: true
 prismjs:
-  enable: false
+  enable: true
   preprocess: true
   line_number: true
   tab_replace: ''
